# pt2itp

./: CHANGELOG.md  README.md  package.json
.circleci/: config.yml
native/: Cargo.toml
native/src/classify/: mod.rs
native/src/conflate/: mod.rs
native/src/consensus/: mod.rs
native/src/convert/: mod.rs
native/src/dedupe/: mod.rs
native/src/map/: mod.rs
native/src/stats/: mod.rs
native/src/text/: tokens.rs
native/src/types/: address.rs  name.rs
scripts/: publish.sh  upload_asset.sh
test/: classify.test.js  cluster.clusterWithin.test.js  cluster.test.js  conflate.test.js  dedupe.test.js  interpolize.test.js  post.dedupe-syn.test.js  split.split.test.js  test-de.test.js  test.test.js
test/fixtures/: classify.geojson  classify_hecate.geojson  cluster-cliff2.json  cluster-mixed.json  dc-modify-multiple.geojson  dc-modify.geojson  dc-new.geojson  dc-persistent-override.geojson  dc-persistent-syns.geojson  dc-persistent.geojson  dedupe.geojson  orphan-output.geojson
