[package]
name = "pt2itp"
version = "0.1.0"
authors = ["ingalls <ingalls@protonmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "pt2itp"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.7.1"

[dependencies]
crossbeam = "0.7"
num_cpus = "1.10"
lazy_static = "1.3.0"
regex = "1.1"
rstar = "0.4"
postgis = "0.6.0"
geo = "0.12.2"
neon = "0.7.1"
neon-serde = { git = "https://github.com/mattciferri/neon-serde.git", rev="a9d9164f45ff65f6f64037fe8cb3490bed357580" }
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
fancy-regex = "0.1.0"
memchr = "2.0.2"
geocoder-abbreviations = { git = "https://github.com/mapbox/geocoder-abbreviations", tag = "v4.6.11dev2" }
unicode-segmentation = "1.3.0"
kodama = "0.1"

[dependencies.geojson]
version = "0.16.0"
features = [
    "geo-types"
]

[dependencies.postgres]
version = "0.15.2"
features = [
    "with-serde_json"
]
